--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-slate
-title: mark.song의 페이지
-description: mark.song의 개인페이지
+title: Mark's Log
+description: 안녕하세요. mark song의 개인 페이지입니다.
 
