--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "deploy": ". deploy.sh",
     "lint": "vue-cli-service lint"
   },
-
   "dependencies": {
     "vue": "^2.6.6"
   },
